// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`English render 1`] = `
<div>
  <button
    class="_button_4123ea"
    data-testid="menuButton"
  >
    <span
      class="_buttonBurgerIcon_4123ea"
    >
      <span
        class="top"
      />
      <span
        class="middle"
      />
      <span
        class="bottom"
      />
    </span>
    <span
      class="_buttonText_4123ea"
    >
      MENU
    </span>
  </button>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <button
    class="_button_4123ea"
    data-testid="menuButton"
  >
    <span
      class="_buttonBurgerIcon_4123ea"
    >
      <span
        class="top"
      />
      <span
        class="middle"
      />
      <span
        class="bottom"
      />
    </span>
    <span
      class="_buttonText_4123ea"
    >
      MENY
    </span>
  </button>
</div>
`;
